# YOLOv3_CPP

./: .gitignore  CMakeLists.txt  README.md
detection/inc/: Darknet.h  Detector.h  darknet_parsing.h
detection/src/: Darknet.cpp
detector/: CMakeLists.txt
detector/inc/: Detector.h  Detetion_export.h
detector/src/: Detector.cpp  darknet_parsing.cpp
scripts/: README.md  run.bat  test.csx
yolov3/: CMakeLists.txt  main.cpp
